# codefluent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  claude-review.yml  dependabot-auto-merge.yml  release-please.yml  release.yml  security-review.yml
docs/: DEMO_SCRIPT.md  PROJECT_PLAN.md  REFERENCES.md  SESSION_DATA.md  TECHNICAL_SPEC.md  UI_SPEC.md
shared/: benchmarks.json  pricing.json
shared/prompts/: registry.json
shared/prompts/config/: v1.0.md
shared/prompts/optimizer/: v1.0.md  v1.1.md
shared/prompts/scoring/: v1.0.md
shared/prompts/single_scoring/: v1.0.md
static/: app.js  index.html  style.css
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: app.js  index.html  style.css
vscode-extension/src/: analytics.ts  cache.ts  dataCache.ts  extension.ts  parser.ts  platform.ts  pricing.ts  prompts.ts  quickwins.ts  scoring.test.ts  scoring.ts  usage.ts  webviewProvider.ts
vscode-extension/src/__mocks__/: vscode.ts
vscode-extension/test/: tsconfig.json
vscode-extension/test/__mocks__/: vscode.ts
webapp/: README.md  extract_prompts.py  main.py  pyproject.toml
webapp/static/: app.js  index.html  style.css
webapp/tests/: conftest.py  test_api.py  test_extract_prompts.py  test_helpers.py  test_prompts.py  test_security.py
(+14 files in other folders)
