[project]
name = "codefluent"
version = "0.2.2"
description = "Personal AI fluency analytics for Claude Code users"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.134.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]
